# unitunes

./: .gitignore  CONTRIBUTING.md  README.md  docs.md  pyproject.toml
.github/workflows/: github-actions.yml  publish.yml
gui/: engine.py  main.py  test.py
tests/: conftest.py  test_beatsaber.py  test_beatsaver.py  test_cli.py  test_spotify.py  test_track.py  test_universal_playlists.py  test_ytm.py
tests/backup_lib/: config.json
tests/backup_lib/cache/musicbrainz/: search_recordings.json
tests/backup_lib/playlists/: headphones.json  other.json
tests/cache/: ytm_headers.json
tests/cache/beatsaber/: map.json  search.json
tests/cache/beatsaver/: get_playlists.json  map.json  search.json
tests/cache/spotify/: search.json  track.json
tests/cache/ytm/: get_song.json
tests/cassettes/test_spotify/: test_spotify_can_pull_track.yaml
tests/cassettes/test_ytm/: test_ytm_can_pull_track.yaml
tests/test_lib/cache/musicbrainz/: search_recordings.json
unitunes/: __init__.py  common_types.py  file_manager.py  index.py  main.py  matcher.py  playlist.py  pull_playlist.py  searcher.py  track.py  uri.py
unitunes/cli/: cli.py  pull.py  service_cli.py  utils.py
unitunes/eval/: eval.py
unitunes/eval/data/: create_dataset.py  dataset.csv
unitunes/gui/: main.py
unitunes/services/: beatsaber.py  beatsaver.py  musicbrainz.py  services.py  spotify.py  ytm.py
unitunes/streamlit/: Unitunes.py  app.py
unitunes/streamlit/pages/: Playlists.py  Services.py
universal_playlists/: cli.py  main.py  matcher.py  playlist.py  searcher.py  track.py  types.py  uri.py
universal_playlists/cli/: cli.py  playlist.py  playlist_cli.py  service.py  service_cli.py  utils.py
universal_playlists/eval/: eval.py
universal_playlists/eval/data/: cases.json  create_dataset.py  dataset.csv
universal_playlists/services/: musicbrainz.py  services.py  spotify.py  ytm.py
