[tool.poetry]
name = "unitunes"
version = "2.0.1"
description = "A GUI and library to manage playlists across music streaming services."
authors = ["platers <platers81@gmail.com>"]
readme = "README.md"
license = "GPLv3"
homepage = "https://github.com/platers/unitunes"
keywords = ["gui", "music", "playlist", "playlists", "spotify", "ytmusic", "musicbrainz"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Natural Language :: English",
    "Topic :: Utilities",
]

[tool.poetry.scripts]

[tool.poetry.dependencies]
python = "^3.10"
spotipy = "^2.19.0"
ytmusicapi = "^0.21.0"
musicbrainzngs = "^0.7.1"
pydantic = "^1.9.0"
strsimpy = "^0.2.1"
ratelimit = "^2.2.1"
youtube-title-parse = "^1.0.0"
tqdm = "^4.64.0"
platformdirs = "^2.5.2"
streamlit = "^1.22.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
